--- a/src/public/css/mainStyle.css
+++ b/src/public/css/mainStyle.css
@@ -1585,6 +1585,11 @@ body.mobile-nav-active #mobile-nav-toggle i {
 .modal_footer_right{
   float: right;
 }
-
+.pagination{text-align: center; margin:25px auto 0;}
+.pagination>div{display: inline-block; margin:0 auto;}
+.pagination .paginationSub {display: inline-block; margin:0 auto; width: 100%;}
+.pagination .paginationSub a { display:inline-block; color: #1c87e5; width: 40px; line-height: 36px; transition: background-color .3s; border: 1px solid #dee2e6;  font-size: 15px; }
+.pagination .paginationSub a.active {background-color: #1e88e5; color: #fff; border: 1px solid #1e88e5;  font-weight: 700;}
+.pagination .paginationSub a:hover:not(.active) {background-color: #ddd;}
 
 
