contact 블로그, 인스타그램,페이스북 계정연동및 icon 생성 로그인전 블로그 페이지 접근금지 script 작성

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -600,17 +600,36 @@ label.valid {
   margin-left: 15px;
   color:red;
   font-weight: bold;
-  position: fixed;
+  position: relative;
+  top: -22px;
+}
+.nickErr{
+  top:2px !important;
+}
+.emailErr{
+  top:2px !important;
+}
+.rePwdErr{
+  top:2px !important;
 }
 .defaultMsg {
   margin-left: 15px;
   color:gray;
   position: fixed;
 }
+.add_htn{
+  border: none;
+  background: #4292dc;
+  color: white;
+  border-radius: 5px;
+  height: 30px;
+}
 .sucMsg{
   margin-left: 15px;
   color:green;
-  position: fixed;
+    margin-bottom: 3px;
+    position: relative;
+    top: -22px;
 }
 #msg1,#msg2,#msg3,#msg4,#msg5,#msg6,#msg7,#msg8,#msg9,#msg10,#msg11,#msg12,#msg13,#msg14,#msg15{
   display: none;
